--- a/starting_kit/scoring_output/scores.html
+++ b/starting_kit/scoring_output/scores.html
@@ -1,1 +1,3 @@
-<pre>======= Set 1 (Hadaca_train): precision_score(set1_score)=0.899139320739 =======
+<pre>======= Set 1 (Hadaca_test): precision_score(set1_score)=0.296879509380 =======
+<pre>======= Set 2 (Hadaca_train): precision_score(set2_score)=0.930151515152 =======
+<pre>======= Set 3 (Hadaca_valid): precision_score(set3_score)=0.382131398014 =======
